--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,18 @@ disqus: adventurousj
 
 permalink: /:title
 
+tag_archive:
+  type: jekyll-archives
+  path: /tag/
+
+jekyll-archives:
+  enabled:
+    - tags
+  layouts:
+    tag: archive-taxonomy
+  permalinks:
+    tag: /tags/:name/
+    
 plugins: [jekyll-paginate]
 
 
