--- a/_data/tagdata.yml
+++ b/_data/tagdata.yml
@@ -1,3 +1,6 @@
 - title : 'blockchain'
   cover: 'assets/images/tag-cover/blockchain.png'
   description : 'A blockchain is a growing list of records, Each block contains a cryptographic hash of the previous block,  a timestamp, and transaction data'
+- title: cryptocurrency
+  cover: 'assets/images/tag-cover/cryptocurrency.jpg'
+  description : 'A cryptocurrency is a digital asset designed to work as a medium of exchange that uses strong cryptography to secure financial transactions, control the creation of additional units, and verify the transfer of assets'
